lab1/Test/L1-A-13-5.output
Error Type B at Line 9
Error Type A at Line 11
Error Type B at Line 20
Error Type B at Line 26
Error Type A at Line 30
Error Type B at Line 38
Error Type A at Line 50
